--- a/package.json
+++ b/package.json
@@ -4,9 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "node scripts/compile.js",
+    "pretest": "npm run compile",
+    "test": "mocha tests/",
+    "predeploy": "npm run compile",
+    "deploy": "node scripts/deploy.js",
+    "dev": "node server.js",
+    "bulid": "next build",
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@material-ui/core": "^1.1.0",
+    "config": "^1.30.0",
+    "fs-extra": "^6.0.1",
+    "human-standard-token-abi": "^1.0.2",
+    "next": "^6.0.3",
+    "next-routes": "^1.4.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "solc": "^0.4.24",
+    "truffle-hdwallet-provider": "0.0.3",
+    "web3": "1.0.0-beta.34"
+  },
+  "devDependencies": {
+    "ganache-cli": "6.1.0",
+    "mocha": "^5.2.0",
+    "pm2": "^2.10.4"
+  }
+
 }
